src/test/ui/const-generics/issues/issue-62456.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-62456.rs:6:20
   |
LL |     let _ = [0u64; N + 1];
   |                    ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to previous error

